CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(tinyxml)

SET(TINYXML_SOURCES 
	tinystr.cpp
	tinyxml.cpp
	tinyxmlerror.cpp
	tinyxmlparser.cpp
	)
		
SET(TINYXML_HEADERS 
	tinystr.h
	tinyxml.h
	)
				
ADD_LIBRARY(tinyxml STATIC ${TINYXML_SOURCES} ${TINYXML_HEADERS})

SET_TARGET_PROPERTIES(tinyxml PROPERTIES DEBUG_POSTFIX "-d")
SET_TARGET_PROPERTIES(tinyxml PROPERTIES VERSION "2.6.1")

INSTALL(TARGETS tinyxml
  RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/bin
  LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib
  ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib
)

IF(NOT WIN32)
INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/libtinyxml.a" DESTINATION ${CMAKE_SOURCE_DIR}/lib)
ENDIF(NOT WIN32)
